--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,13 @@ main {
   justify-content: space-around;
 }
 
+.select {
+  min-width: 400px;
+}
+
 form {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
   min-width: 80vw;
@@ -34,7 +39,7 @@ form {
 .float-label {
   display: flex;
   flex-direction: column;
-  min-width: 350px;
+  width: 30%;
   position: relative;
 }
 
@@ -68,6 +73,32 @@ form {
 
 .float-label .active {
   transform: translate(0, 12px) scale(0.75);
+}
+
+form button {
+  margin-top: 30px;
+  width: 50%;
+  height: 56px;
+  outline: 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background: skyblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+}
+
+form button:disabled {
+  background: grey;
+}
+
+.amount {
+  transform: scale(1.2);
+}
+
+.amount input {
+  color: white;
+  background-color: #282c34;
+  text-align: center;
 }
 
 footer p {
