--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ main {
 }
 
 .select {
-  min-width: 400px;
+  width: 400px;
 }
 
 form {
@@ -105,4 +105,41 @@ footer p {
   color: white;
   font-size: medium;
   font-family: "Indie Flower", cursive;
+}
+
+@media screen and (max-width: 768px) {
+  * {
+    box-sizing: border-box;
+  }
+
+  .select {
+    width: 80%;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+  }
+
+  .float-label {
+    width: 80%;
+    position: relative;
+  }
+
+  .float-label input {
+    width: 100%;
+    height: 50px;
+    margin: 10px 0;
+    padding: 14px 16px 5px 10px;
+    font-size: 16px;
+  }
+
+  form button {
+    width: 50%;
+    height: 45px;
+    font-size: 1.2rem;
+  }
 }
